--- a/views/users/showuser.handlebars
+++ b/views/users/showuser.handlebars
@@ -1,10 +1,11 @@
 <header class="page-header">
   <h1>Users</h1>
-  <a href="/users/new" class="btn btn-primary">+ New Loser</a>
+  <a href="/users/{{user.id}}/edit" class="btn btn-primary">Edit</a>
+  <a href="/users/{{user.id}}/delete" class="btn btn-primary">Delete</a>
 </header>
 
 
-{{#if users.length }}
+{{#if user }}
   <table class="table">
     <thead>
       <tr>
@@ -17,7 +18,6 @@
       </tr>
     </thead>
     <tbody>
-      {{#each users as |user| }}
       <tr>
         <td>
           <a href="/users/{{ user.id }}">{{ user.fname }}</a>
@@ -38,9 +38,8 @@
           <a href="/users/{{ user.id }}?_method=delete" class="text-danger">Delete</a>
         </td>
       </tr>
-      {{/each }}
     </tbody>
   </table>
 {{else }}
-  <p class="text-danger">No users</p>
+  <p class="text-danger">No user</p>
 {{/if }}
