--- a/views/layouts/application.handlebars
+++ b/views/layouts/application.handlebars
@@ -5,12 +5,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
     <title>
-      Demo Exploring Sequelize
+      ErrybodyCal
       {{#if title }}
         | {{ title }}
       {{/if }}
     </title>
-    <script
+    <scripte
       src="https://code.jquery.com/jquery-3.2.1.min.js"
       integrity="sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4="
       crossorigin="anonymous">
