--- a/views/calendars/index.handlebars
+++ b/views/calendars/index.handlebars
@@ -1,45 +1,42 @@
 <header class="page-header">
   <h1>Calenloser</h1>
-  <a href="/users/new" class="btn btn-primary">+ New Calenloser</a>
+  <a href="/calendars/new" class="btn btn-primary">+ New Calenloser</a>
 </header>
 
 
-{{#if users.length }}
+{{#if calendars.length }}
   <table class="table">
     <thead>
       <tr>
         <th>Calenloser Name</th>
-        <th>Username</th>
+        <th>calendarname</th>
         <th>Email</th>
         <th></th>
         <th></th>
       </tr>
     </thead>
     <tbody>
-      {{#each users as |user| }}
+      {{#each calendars as |calendar| }}
       <tr>
         <td>
-          <a href="/users/{{ user.id }}">{{ user.fname }}</a>
+          <a href="/calendars/{{ calendar.id }}">{{ calendar.name }}</a>
         </td>
         <td>
-          <a href="/users/{{ user.id }}">{{ user.lname }}</a>
+          <a href="/calendars/{{ calendar.id }}">{{ calendar.user.username }}</a>
         </td>
         <td>
-          <a href="/users/{{ user.id }}">{{ user.username }}</a>
+          <a href="/calendars/{{ calendar.id }}">{{ calendar.user.email }}</a>
         </td>
         <td>
-          <a href="/users/{{ user.id }}">{{ user.email }}</a>
+          <a href="/calendars/{{ calendar.id }}/edit">Edit</a>
         </td>
         <td>
-          <a href="/users/{{ user.id }}/edit">Edit</a>
-        </td>
-        <td>
-          <a href="/users/{{ user.id }}?_method=delete" class="text-danger">Delete</a>
+          <a href="/calendars/{{ calendar.id }}?_method=delete" class="text-danger">Delete</a>
         </td>
       </tr>
       {{/each }}
     </tbody>
   </table>
 {{else }}
-  <p class="text-danger">No users</p>
+  <p class="text-danger">No calendars</p>
 {{/if }}
